--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="ejecutivo">
         <p class="perfilejecutivo">Programador web, en busca de oportunidades para obtener experiencias como Full Stack,<br>para ampliar mis conocimientos y contribuir con los objetivos de la empresa, y asi tener un <br>crecimiento personal y en la industria.</p>
         </div>
-        <img class="perfil" src="/img/foto_Laboral1.jpg" alt="imagenperfil">
+        <img class="perfil" src="./img/Foto_Laboral1.jpg" alt="imagenperfil">
         <img class="fondo" src="https://i.pinimg.com/originals/b9/56/b5/b956b5b43270f3450dd7220e0d25c3dc.jpg" alt="">
     </header>
     <aside class="right_panel">
